TTK-25907: Remove style of player div

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body_base %}
-    <div id="player-container" style="display:block;width:100%;">
+    <div id="player-container">
     </div>
     <style>
         #playerContainer_videoContainer {
