TTK-25655 use paella player as pumukit base player

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -79,7 +79,7 @@
         },
 
         "es.upv.paella.playbackRateButton": {
-            "enabled": true,
+            "enabled": false,
             "side": "right",
             "order": 102,
             "parentContainer": "videoContainer",
@@ -105,7 +105,7 @@
         },
 
         "es.upv.paella.zoomPlugin": {
-            "enabled": true,
+            "enabled": false,
             "order": 0,
             "maxZoom": 400,
             "showButtons": true,
@@ -143,7 +143,7 @@
         },
 
         "es.upv.paella.qualitySelector": {
-            "enabled": true,
+            "enabled": false,
             "side": "right",
             "parentContainer": "videoContainer"
         },
@@ -154,7 +154,7 @@
         },
 
         "es.upv.paella.defaultShortcuts": {
-            "enabled": true,
+            "enabled": false,
             "validPlaybackRates": [0.75, 2, 1, 1.5]
         },
 
@@ -174,7 +174,7 @@
         },
 
         "es.upv.paella.userEventTracker": {
-            "enabled": true,
+            "enabled": false,
             "context": "userTracking",
             "events": [
                 "PLAY",
