--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -11,86 +11,86 @@
     <div id="player-container">
     </div>
     <style>
-        #playerContainer_videoContainer {
-            background-color: #222;
-            background-image: linear-gradient(to bottom, #333333, #111111);
-        }
+        {##playerContainer_videoContainer {#}
+        {#    background-color: #222;#}
+        {#    background-image: linear-gradient(to bottom, #333333, #111111);#}
+        {#}#}
 
-        #playerContainer_videoContainer_bkg {
-            display: none;
-        }
+        {##playerContainer_videoContainer_bkg {#}
+        {#    display: none;#}
+        {#}#}
 
-        {% if logo is defined and logo %}
-        #paella_logo\.png {
-             content: url("{{ logo }}");
-        }
-        {% else %}
-        #paella_logo\.png {
-            display: none !important;
-        }
-        {% endif %}
+        {#{% if logo is defined and logo %}#}
+        {##paella_logo\.png {#}
+        {#     content: url("{{ logo }}");#}
+        {#}#}
+        {#{% else %}#}
+        {##paella_logo\.png {#}
+        {#    display: none !important;#}
+        {#}#}
+        {#{% endif %}#}
 
-        {% if intro or tail %}
-            #introContainer, #tailContainer {
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                overflow: hidden;
-                z-index: 88888;
-            }
+{#        {% if intro or tail %}#}
+{#            #introContainer, #tailContainer {#}
+{#                position: absolute;#}
+{#                top: 0;#}
+{#                right: 0;#}
+{#                bottom: 0;#}
+{#                left: 0;#}
+{#                overflow: hidden;#}
+{#                z-index: 88888;#}
+{#            }#}
 
-            #intro, #tail {
-                width: 100%;
-                height: 100%;
-            }
+{#            #intro, #tail {#}
+{#                width: 100%;#}
+{#                height: 100%;#}
+{#            }#}
 
-            #skipContainer{
-                position: absolute;
-                bottom: 3em;
-                cursor: pointer;
-                max-width: 300px;
-                right: 1em;
-                background: rgba(80, 80, 80, 0.8);
-                font-weight: bold;
-                color: #fafafa;
-                padding: .65em;
-                font-size: 1.2em;
-                z-index: 99999;
-            }
+{#            #skipContainer{#}
+{#                position: absolute;#}
+{#                bottom: 3em;#}
+{#                cursor: pointer;#}
+{#                max-width: 300px;#}
+{#                right: 1em;#}
+{#                background: rgba(80, 80, 80, 0.8);#}
+{#                font-weight: bold;#}
+{#                color: #fafafa;#}
+{#                padding: .65em;#}
+{#                font-size: 1.2em;#}
+{#                z-index: 99999;#}
+{#            }#}
 
-            #overlay {
-                position: absolute;
-                opacity: 0.7;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                z-index: 99998;
-                cursor: pointer;
-            }
+{#            #overlay {#}
+{#                position: absolute;#}
+{#                opacity: 0.7;#}
+{#                top: 0;#}
+{#                bottom: 0;#}
+{#                left: 0;#}
+{#                right: 0;#}
+{#                z-index: 99998;#}
+{#                cursor: pointer;#}
+{#            }#}
 
-            .playButtonOnScreenIcon {
-                height: 100%;
-            }
+{#            .playButtonOnScreenIcon {#}
+{#                height: 100%;#}
+{#            }#}
 
-            @media(max-width: 767px) {
-                #skipContainer {
-                    bottom: 1.5em;
-                }
-            }
-        {% endif %}
+{#            @media(max-width: 767px) {#}
+{#                #skipContainer {#}
+{#                    bottom: 1.5em;#}
+{#                }#}
+{#            }#}
+{#        {% endif %}#}
 
-        {% if not multimediaObject.getProperty('opencast') %}
-            .buttonPlugin.searchButton{
-                display:none !important;
-            }
+{#        {% if not multimediaObject.getProperty('opencast') %}#}
+{#            .buttonPlugin.searchButton{#}
+{#                display:none !important;#}
+{#            }#}
 
-            .buttonPlugin.footPrints{
-                display:none !important;
-            }
-        {% endif %}
+{#            .buttonPlugin.footPrints{#}
+{#                display:none !important;#}
+{#            }#}
+{#        {% endif %}#}
     </style>
     <script>
         function resizeFrame(elem) {
@@ -98,6 +98,7 @@
             var height = width / 16 * 9;
             $(elem).height(height);
         }
+
         $(window).on('load resize', function () {
             resizeFrame($('#player-container'));
         });
