--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -231,6 +231,13 @@
             "enabled": true,
             "side": "left",
             "order": 5
+        },
+
+        "es.teltek.paella.liveIndicatorButtonPlugin": {
+            "enabled": true,
+            "side": "left",
+            "order": 7
         }
     }
 }
+
