--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -237,6 +237,9 @@
             "enabled": {{ isLive ? 'true' : 'false' }},
             "side": "left",
             "order": 7
+        },
+        "es.teltek.paella.breaksButtonPlugin": {
+            "enabled": {{ notLive ? 'true' : 'false' }}
         }
     }
 }
