Add breaks and trimming functionality

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -238,7 +238,8 @@
             "side": "left",
             "order": 7
         },
-        "es.teltek.paella.breaksButtonPlugin": {
+
+        "org.opencast.paella.breaksPlugin": {
             "enabled": {{ notLive ? 'true' : 'false' }}
         }
     }
