TTK-23444 Add paella-teltek-plugins last version and refactor code

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -8,278 +8,12 @@
 {% endblock %}
 
 {% block body_base %}
-    <div id="player-container">
-    </div>
-    <style>
-        {##playerContainer_videoContainer {#}
-        {#    background-color: #222;#}
-        {#    background-image: linear-gradient(to bottom, #333333, #111111);#}
-        {#}#}
 
-        {##playerContainer_videoContainer_bkg {#}
-        {#    display: none;#}
-        {#}#}
+    <div id="player-container"></div>
 
-        {#{% if logo is defined and logo %}#}
-        {##paella_logo\.png {#}
-        {#     content: url("{{ logo }}");#}
-        {#}#}
-        {#{% else %}#}
-        {##paella_logo\.png {#}
-        {#    display: none !important;#}
-        {#}#}
-        {#{% endif %}#}
-
-{#        {% if intro or tail %}#}
-{#            #introContainer, #tailContainer {#}
-{#                position: absolute;#}
-{#                top: 0;#}
-{#                right: 0;#}
-{#                bottom: 0;#}
-{#                left: 0;#}
-{#                overflow: hidden;#}
-{#                z-index: 88888;#}
-{#            }#}
-
-{#            #intro, #tail {#}
-{#                width: 100%;#}
-{#                height: 100%;#}
-{#            }#}
-
-{#            #skipContainer{#}
-{#                position: absolute;#}
-{#                bottom: 3em;#}
-{#                cursor: pointer;#}
-{#                max-width: 300px;#}
-{#                right: 1em;#}
-{#                background: rgba(80, 80, 80, 0.8);#}
-{#                font-weight: bold;#}
-{#                color: #fafafa;#}
-{#                padding: .65em;#}
-{#                font-size: 1.2em;#}
-{#                z-index: 99999;#}
-{#            }#}
-
-{#            #overlay {#}
-{#                position: absolute;#}
-{#                opacity: 0.7;#}
-{#                top: 0;#}
-{#                bottom: 0;#}
-{#                left: 0;#}
-{#                right: 0;#}
-{#                z-index: 99998;#}
-{#                cursor: pointer;#}
-{#            }#}
-
-{#            .playButtonOnScreenIcon {#}
-{#                height: 100%;#}
-{#            }#}
-
-{#            @media(max-width: 767px) {#}
-{#                #skipContainer {#}
-{#                    bottom: 1.5em;#}
-{#                }#}
-{#            }#}
-{#        {% endif %}#}
-
-{#        {% if not multimediaObject.getProperty('opencast') %}#}
-{#            .buttonPlugin.searchButton{#}
-{#                display:none !important;#}
-{#            }#}
-
-{#            .buttonPlugin.footPrints{#}
-{#                display:none !important;#}
-{#            }#}
-{#        {% endif %}#}
-    </style>
     <script>
-        function resizeFrame(elem) {
-            var width = $(elem).width();
-            var height = width / 16 * 9;
-            $(elem).height(height);
-        }
-
-        $(window).on('load resize', function () {
-            resizeFrame($('#player-container'));
-        });
-                {#loadPaellaPlayer('{{ multimediaObject.id }}');#}
-    {#
-        localStorage.setItem('opencast_host', "{{ opencast_host }}");
-        var isOpencast = "{{ multimediaObject.getProperty('opencast') }}";
-        if(isOpencast) {
-            localStorage.setItem('opencastId',"{{ multimediaObject.getProperty('opencast') }}");
-        } else {
-            localStorage.removeItem('opencastId');
-        }
-
-        var username = "{{ app.user.username|default('anonymous') }}";
-        var useremail = "{{ app.user.email|default('anonymous@pumukit.org') }}";
-
-        {% if 'on_play' == when_dispatch_view_event|default('') %}
-        $(document).bind(paella.events.play, function (event, params) {
-          if (!window.notifyVideoPlayedReq) {
-            window.notifyVideoPlayedReq = $.post('{{ path('pumukit_trackplayed_index', {id: tracks[0].id}) }}');
-          }
-        });
-        {% endif %}
-
-        $(document).bind(paella.events.loadComplete, function (event, params) {
-            {% if intro
-                or (autostart is defined and autostart == 'true') %}
-                if (!paella.utils.userAgent.browser.IsMobileVersion && !document.querySelector("#introContainer")){
-                    setTimeout(function () {
-                        paella.player.play().catch(function(err) {
-                            {% if autoplay_fallback == 'mute_fallback' %}
-                                paella.player.videoContainer.setVolume(0);
-                                paella.player.play();
-                            {% endif %}
-                        });
-                    }, 300);
-                }
-            {% endif %}
-
-            setTimeout(function () {
-                setPaellaProfile("{{ getPaellaLayout(multimediaObject, app.request) }}");
-            }, 300);
-
-        });
-
-        function playPauseCanvas(mainContainer, video){
-            const icon = document.createElement('canvas');
-            icon.className = 'playButtonOnScreenIcon';
-            icon.style.display = (video.autoplay) ?  'none' : 'block' ;
-            if(/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
-                icon.style.display = 'block';
-            }
-
-            mainContainer.appendChild(icon);
-
-            setTimeout(function(){
-                const width = jQuery(mainContainer).innerWidth();
-                const height = jQuery(mainContainer).innerHeight();
-
-                icon.width = width;
-                icon.height = height;
-
-                const iconSize = (width<height) ? width/3 : height/3;
-
-                const ctx = icon.getContext('2d');
-
-                ctx.translate((width-iconSize)/2, (height-iconSize)/2);
-
-                ctx.beginPath();
-                ctx.arc(iconSize/2, iconSize/2 ,iconSize/2, 0, 2*Math.PI, true);
-                ctx.closePath();
-
-                ctx.strokeStyle = 'white';
-                ctx.lineWidth = 10;
-                ctx.stroke();
-                ctx.fillStyle = '#8f8f8f';
-                ctx.fill();
-
-                ctx.beginPath();
-                ctx.moveTo(iconSize/3, iconSize/4);
-                ctx.lineTo(3*iconSize/4, iconSize/2);
-                ctx.lineTo(iconSize/3, 3*iconSize/4);
-                ctx.lineTo(iconSize/3, iconSize/4);
-                ctx.closePath();
-                ctx.fillStyle = 'white';
-                ctx.fill();
-
-                ctx.stroke();
-            }, 100);
-
-            $(mainContainer).bind('click', function () {
-                if(video.paused){
-                    icon.style.display = 'none';
-                    video.play();
-                }else{
-                    icon.style.display = 'block';
-                    video.pause();
-                }
-            });
-        }
-
-        function introOrTailVideo(typeVideo) {
-            const container= document.querySelector("#playerContainer");
-            const overlay = document.createElement("overlay");
-            const skipContainer = document.createElement("div");
-            const video = document.createElement("video");
-            const videoContainer = document.createElement("div");
-
-            if (typeVideo == "intro") {
-                {% if intro %}
-                    video.src = "{{ absolute_url(track_url(intro)) }}";
-                    video.poster = "{{ multimediaObject|first_url_pic(true) }}";
-                {% endif %}
-            } else {
-                {% if tail %}
-                    video.src = "{{ absolute_url(track_url(tail)) }}";
-                {% endif %}
-            }
-
-            video.id = (typeVideo == "intro") ? 'intro' : 'tail';
-            video.addEventListener('ended', onEndedVideo);
-            video.autoplay = (typeVideo == "intro") ? "{{ autostart }}" : "true";
-            video.muted = paella.utils.userAgent.browser.IsMobileVersion;
-
-            skipContainer.id = "skipContainer";
-            videoContainer.id = (typeVideo == "intro") ? 'introContainer' : 'tailContainer';
-            overlay.id = "overlay";
-            skipContainer.addEventListener("click", onEndedVideo);
-
-            skipContainer.innerHTML = (typeVideo == "intro") ? '{{ "Next up" | trans }}' : '{{ "Finish" | trans }}';
-
-            if(!document.querySelector("#" + video.id)) {
-                videoContainer.appendChild(video);
-                videoContainer.appendChild(skipContainer);
-                videoContainer.appendChild(overlay);
-                container.appendChild(videoContainer);
-            }
-            playPauseCanvas(overlay, video);
-
-            function onEndedVideo() {
-                container.removeChild(videoContainer);
-                if (typeVideo == "intro") {
-                    if(paella.player.videoLoader.loadStatus){
-                        setTimeout(function () {
-                            paella.player.play();
-                        }, 300);
-                    }
-                }
-            }
-        }
-
-        var firstPlay = false;
-
-        {% if intro %}
-            introOrTailVideo("intro");
-            loadPaella('playerContainer', '{{ multimediaObject.id }}');
-        {% else %}
-            loadPaella('playerContainer', '{{ multimediaObject.id }}');
-        {% endif %}
-
-        paella.events.bind(paella.events.endVideo, function (event) {
-            {% if tail %}
-                    introOrTailVideo("tail");
-            {% endif %}
-            firstPlay = true;
-            paella.events.bind(paella.events.play, function (event) {
-                {% if intro %}
-                    if (firstPlay) {
-                        introOrTailVideo("intro");
-                        paella.player.pause();
-                        firstPlay = false;
-                    }
-                {% endif %}
-            });
-        });
-
-        function setPaellaProfile(profileName) {
-            $('.viewModeItemButton').removeClass('selected');
-            $('.viewModeItemButton.' + profileName).addClass('selected');
-            paella.player.setProfile(profileName);
-            paella.utils.cookies.set("lastProfile", profileName);
-        } #}
+        {% include('@PumukitPaellaPlayer/PaellaPlayer/resize_video.js.twig') %}
+        {% include('@PumukitPaellaPlayer/PaellaPlayer/multistream.js.twig') %}
+        {% include('@PumukitPaellaPlayer/PaellaPlayer/dispatch_view_event.js.twig') %}
     </script>
 {% endblock %}
