--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -1,9 +1,12 @@
 {
     "progressIndicator": {
-        "showTotal": false,
-        "parentContainer": "progressIndicator",
+        "showTotal": true,
+        "parentContainer": "buttonArea",
         "side": "left",
-        "visible": false
+        "visible": true,
+        "showHandler": true,
+        "hideHandlerOnMouseOut": true,
+        "showRemainingProgress": true
     },
     "plugins": {
         "es.upv.paella.singleVideo": {
@@ -90,7 +93,7 @@
         },
 
         "es.upv.paella.volumeButtonPlugin": {
-            "enabled": false,
+            "enabled": true,
             "side": "left",
             "order": 6
         },
@@ -108,7 +111,7 @@
         },
 
         "es.upv.paella.zoomPlugin": {
-            "enabled": false,
+            "enabled": true,
             "order": 0,
             "maxZoom": 400,
             "showButtons": true,
@@ -141,8 +144,7 @@
 
         "es.upv.paella.captionsSelectorPlugin": {
             "enabled": true,
-            "side": "right",
-            "parentContainer": "videoContainer"
+            "side": "right"
         },
 
         "es.upv.paella.qualitySelector": {
@@ -215,12 +217,6 @@
             ]
         },
 
-        "es.teltek.paella.integratedDurationButtonPlugin": {
-            "enabled": {{ notLive ? 'true' : 'false' }},
-            "side": "left",
-            "order": 6
-        },
-
         "es.teltek.paella.pipButtonPlugin": {
             "enabled": {{ isMonostream ? 'true' : 'false' }},
             "side": "right",
@@ -233,12 +229,6 @@
             "order": 4
         },
 
-        "es.teltek.paella.volumeButtonPlugin": {
-            "enabled": true,
-            "side": "left",
-            "order": 5
-        },
-
         "es.teltek.paella.liveIndicatorButtonPlugin": {
             "enabled": {{ isLive ? 'true' : 'false' }},
             "side": "left",
@@ -247,6 +237,46 @@
 
         "org.opencast.paella.breaksPlugin": {
             "enabled": {{ notLive ? 'true' : 'false' }}
+        },
+
+        "es.upv.paella.findCaptionsPlugin": {
+            "enabled": true,
+            "side": "right",
+            "description": "Search in captions"
+        },
+
+        "es.upv.paella.slideMapProgressBarPlugin": {
+            "enabled": true,
+            "markColor": {
+                "mouseOut": "#0A0A0A",
+                "mouseHover": "#A9A9A9"
+            },
+            "markWidth": 3,
+            "drawBackground": false
+        },
+
+        "es.upv.paella.customTimeProgressIndicator": {
+            "enabled": false,
+            "textSize": "large",
+            "showTotal": false
+        },
+
+        "es.upv.paella.nextSlideNavigatorButton": {
+            "enabled": true,
+            "content": [
+                "presentation"
+            ],
+            "side": "left",
+            "order": 1
+        },
+
+        "es.upv.paella.prevSlideNavigatorButton": {
+            "enabled": true,
+            "content": [
+                "presentation"
+            ],
+            "side": "left",
+            "order": 0
         }
     }
 }
