Dont show speed icon and dont resize player container

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -78,7 +78,8 @@
             "enabled": {{ notLive ? 'true' : 'false' }},
             "side": "right",
             "order": 102,
-            "rates": [0.75, 1, 1.5, 2]
+            "rates": [0.75, 1, 1.5, 2],
+            "showIcon": false
         },
 
         "es.upv.paella.frameControlButtonPlugin": {
