--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -236,6 +236,10 @@
             "order": 7
         },
 
+        "es.teltek.paella.viewsPlugin": {
+            "enabled": true
+        },
+
         "org.opencast.paella.breaksPlugin": {
             "enabled": {{ notLive ? 'true' : 'false' }}
         },
