TTK-26489 remove pointer events on video:

--- a/Resources/public/paella/src/style.css
+++ b/Resources/public/paella/src/style.css
@@ -63,7 +63,7 @@
     font-family: helvetica, arial, sans-serif;
 }
 
-.video-player{
+.video-player, video{
     pointer-events: none !important;
 }
 
