--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -19,6 +19,10 @@
         $(window).resize(function () {
             resizeFrame($('#player-container'));
         });
+
+        $(window).on("load", function() {
+            resizeFrame($('#player-container'));
+        });
     </script>
 {% endblock %}
 
