--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -12,17 +12,17 @@
         "es.upv.paella.singleVideo": {
             "enabled": true,
             "validContent": [
-                { "id": "presenter", "content": ["presenter"], "icon": "present-mode-2.svg", "title": "Presenter" },
-                { "id": "presentation", "content": ["presentation"], "icon": "present-mode-1.svg", "title": "Presentation" },
-                { "id": "presenter-2", "content": ["presenter-2"], "icon": "present-mode-1.svg", "title": "Presentation" }
+                { "id": "presenter", "content": ["presenter"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-2.svg')}}", "title": "Presenter" },
+                { "id": "presentation", "content": ["presentation"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-1.svg')}}", "title": "Presentation" },
+                { "id": "presenter-2", "content": ["presenter-2"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-1.svg')}}", "title": "Presentation" }
             ]
         },
         "es.upv.paella.dualVideo": {
             "enabled": true,
             "validContent": [
-                { "id": "presenter-presentation", "content": ["presenter","presentation"], "icon": "present-mode-3.svg", "title": "Presenter and presentation" },
-                { "id": "presenter-2-presentation", "content": ["presenter-2","presentation"], "icon": "present-mode-3.svg", "title": "Presenter and presentation" },
-                { "id": "presenter-presenter-2", "content": ["presenter","presenter-2"], "icon": "present-mode-3.svg", "title": "Presenter and presentation" }
+                { "id": "presenter-presentation", "content": ["presenter","presentation"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-3.svg')}}", "title": "Presenter and presentation" },
+                { "id": "presenter-2-presentation", "content": ["presenter-2","presentation"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-3.svg')}}", "title": "Presenter and presentation" },
+                { "id": "presenter-presenter-2", "content": ["presenter","presenter-2"], "icon": "{{ asset('bundles/pumukitpaellaplayer/images/present-mode-3.svg')}}", "title": "Presenter and presentation" }
             ]
         },
         "es.upv.paella.hlsVideoFormat": {
