TTK-26970: Add shortcuts help plugin

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -173,7 +173,7 @@
         },
 
         "es.upv.paella.keyboardShortcutsHelp": {
-            "enabled": false,
+            "enabled": true,
             "order": 80,
             "description": "Keyboard Shortcuts",
             "side": "right"
