TTK-27240: Adapt image to player

--- a/Resources/public/paella/src/style.css
+++ b/Resources/public/paella/src/style.css
@@ -34,3 +34,7 @@
 .center-container div.captions-search-container input {
     color: #000;
 }
+
+.image-container, .image-container img {
+    width: 100%;
+}
