--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -26,7 +26,7 @@
             ]
         },
         "es.upv.paella.hlsVideoFormat": {
-            "enabled": {{ isLive ? 'true' : 'false' }},
+            "enabled": true,
             "order": 0,
             "hlsConfig": {
                 "maxBufferLength": 40
