TTK-27296: Disable usertracking plugin

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -182,7 +182,7 @@
         },
 
         "es.upv.paella.userEventTracker": {
-            "enabled": true,
+            "enabled": false,
             "context": "userTracking",
             "events": [
                 "PLAY",
